# ciaf_agents

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  README_PROJECT.md  pyproject.toml  requirements.txt  verify_installation.py
.github/workflows/: workflow.yml
config/: example_config.yaml
config/policies/: SCHEMA_GUIDE.md  default_policies.yaml  schema.json  sensitive_actions.yaml  sensitive_actions_schema.json
docs/: API_REFERENCE.md  BILLION_SCALE_IMPLEMENTATION.md  LOAD_TESTING_GUIDE.md  RUN_BILLION_SCALE_TESTS.md  SCALABILITY_ASSESSMENT.md  TROUBLESHOOTING.md  architecture.md  implementation_guide.md  whitepaper_agentic_execution_boundaries.md
examples/: demo.py  load_test_runner.py
examples/scenarios/: __init__.py  financial_approvals.py  healthcare_claims.py  production_changes.py
src/ciaf_agents/: __init__.py
src/ciaf_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ciaf_agents/core/: __init__.py  types.py
src/ciaf_agents/evidence/: __init__.py  vault.py
src/ciaf_agents/execution/: __init__.py  executor.py
src/ciaf_agents/iam/: __init__.py  store.py
src/ciaf_agents/pam/: __init__.py  store.py
src/ciaf_agents/policy/: __init__.py  conditions.py  engine.py
src/ciaf_agents/utils/: __init__.py  helpers.py
tests/: conftest.py  load_test_config.py  test_evidence.py  test_execution.py  test_iam.py  test_load_million_interactions.py  test_pam.py  test_policy.py  test_policy_conditions.py  test_utils.py
