[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciaf-agents"
version = "1.0.0"
description = "Identity and Access Management (IAM) and Privileged Access Management (PAM) for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BUSL-1.1" }
authors = [
  { name = "CIAF-LCM Project Contributors" }
]
keywords = ["iam", "pam", "security", "ai", "agents", "governance", "audit", "compliance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "black>=23.0.0",
  "flake8>=6.0.0",
  "isort>=5.12.0",
  "mypy>=1.0.0",
  "psutil>=5.9.0",
]
yaml = ["pyyaml>=6.0"]
aws = ["boto3>=1.26.0"]
azure = ["azure-storage-blob>=12.0.0"]
gcp = ["google-cloud-storage>=2.0.0"]

[project.urls]
Documentation = "https://github.com/CognitiveInsight-ai/ciaf-agents/tree/main/docs"
Source = "https://github.com/CognitiveInsight-ai/ciaf-agents"
Tracker = "https://github.com/CognitiveInsight-ai/ciaf-agents/issues"
Homepage = "https://github.com/CognitiveInsight-ai/ciaf-agents"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ciaf_agents*"]